# metadata_lib

./: README.md  clean_pip_installs.md  pyproject.toml  requirements.txt
metadata_lib/: build.py  manage.py  unid.py  validate.py  view.py
metadata_lib/definitions/: __init__.py  allowed_values.py
metadata_lib/schemas/: __init__.py  activity.py  data_entity.py  namespace.py  pipeline.py  schema.py  system.py  watermark.py
metadata_lib/storage_adapters/: __init__.py  abstract_adapter.py  local_filesystem.py
