[tool.poetry]
name = "metadata_lib"
version = "0.1.1"
description = "Library for managing a simple metadata layers for a dataplatform."
authors = ["Jeroen Kroesen <jeroen@kroesen.nu>"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
pendulum = "^3.0.0"
pandas = "^2.2.2"
fastapi = {extras = ["all"], version = "^0.110.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
